finish home page

--- a/app/src/main/res/layout/bangumibrief_layout.xml
+++ b/app/src/main/res/layout/bangumibrief_layout.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp">
+    android:layout_marginBottom="2dp"
+    android:layout_marginLeft="3dp"
+    android:layout_marginStart="3dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginEnd="7dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
@@ -20,10 +23,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:minWidth="170dp"
-            android:maxWidth="170dp"
-            android:minHeight="170dp"
-            android:maxHeight="170dp"/>
+            android:minWidth="142dp"
+            android:maxWidth="142dp"
+            android:minHeight="160dp"
+            android:maxHeight="160dp"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -31,10 +34,10 @@
         android:id="@+id/bangumi_title"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_margin="2dp"
         android:layout_below="@id/card"
         android:fontFamily="PT Sans Caption"
         android:textColor="@color/titleColor"
-        android:gravity="center"
         android:textSize="6pt"/>
 
 </RelativeLayout>
