--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,24 @@
     tools:context="com.example.aniscoreandroid.MainActivity">
 
     <FrameLayout
-        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_weight="1" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/container"/>
+
+    <View
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp"
+    android:background="#dfdfdf"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:background="#ffffff"
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:layout_gravity="bottom"
+        app:menu="@menu/navigation_bar"
+        app:itemIconSize="30dp"/>
+
 </LinearLayout>
