--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -34,6 +34,17 @@
             app:layout_constraintTop_toBottomOf="@id/background_image"
             app:layout_constraintBottom_toTopOf="@id/rank_list"/>
 
+        <TextView
+            android:id="@+id/to_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="15dp"
+            app:layout_constraintTop_toBottomOf="@id/background_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/full_rank"
+            android:drawableRight="@drawable/arrow_icon"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rank_list"
             android:layout_width="wrap_content"
@@ -56,7 +67,6 @@
 
         <TextView
             android:id="@+id/current_season_title"
-            android:text="@string/home_rank"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,6 +74,16 @@
             android:textSize="8pt"
             android:textColor="@color/titleColor"
             app:layout_constraintTop_toBottomOf="@id/divider_1"/>
+
+        <TextView
+        android:id="@+id/to_season_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider_1"
+        android:layout_margin="10dp"
+        android:text="@string/season_list"
+        android:drawableRight="@drawable/arrow_icon"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/current_bangumi_list"
@@ -94,6 +114,16 @@
             android:textColor="@color/titleColor"
             app:layout_constraintTop_toBottomOf="@id/divider_2"/>
 
+        <TextView
+            android:id="@+id/to_season_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_2"
+            android:layout_margin="10dp"
+            android:text="@string/season_list"
+            android:drawableRight="@drawable/arrow_icon"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/previous_bangumi_list"
             android:layout_width="wrap_content"
@@ -122,6 +152,16 @@
             android:layout_margin = "7dp"
             android:textColor="@color/titleColor"
             app:layout_constraintTop_toBottomOf="@id/divider_3"/>
+
+        <TextView
+            android:id="@+id/to_season_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_3"
+            android:layout_margin="10dp"
+            android:text="@string/season_list"
+            android:drawableRight="@drawable/arrow_icon"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/before_previous_bangumi_list"
