--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -1,34 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/layout"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/app_background">
+        android:background="@color/app_background"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            android:layout_margin="10dp">
+
+            <ImageView
+                android:id="@+id/avatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="80dp"
+                android:maxWidth="80dp"
+                android:maxHeight="80dp"
+                android:minHeight="80dp"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id='@+id/username'
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
-            android:layout_centerVertical="true"
-            android:layout_margin="5dp"
-            android:text="@string/profile_photo" />
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@id/card"
+            android:textSize="10pt"/>
 
-        <ImageView
-            android:id="@+id/avatar"
+        <TextView
+            android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_toStartOf="@id/arrow"
-            android:maxWidth="80dp"
-            android:maxHeight="80dp"
-            android:minWidth="80dp"
-            android:minHeight="80dp" />
+            android:layout_toRightOf="@id/card"
+            android:layout_below="@id/username"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="7pt"/>
 
         <ImageView
             android:id="@+id/arrow"
@@ -36,9 +57,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:scaleX="1.5"
-            android:scaleY="1.5"
             android:layout_gravity="center_vertical"
+            android:scaleX="2"
+            android:scaleY="2"
+            android:tint="@color/viewMore_color"
+            android:layout_marginEnd="5dp"
             android:src="@drawable/arrow_icon" />
 
     </RelativeLayout>
@@ -48,16 +71,31 @@
         android:layout_height="1dp"
         android:background="#dfdfdf" />
 
-    <androidx.cardview.widget.CardView
+    <RelativeLayout
+        android:id="@+id/login_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
         <TextView
-            android:id='@+id/username'
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="10pt"
+            android:layout_above="@id/login"
+            android:layout_marginBottom="20dp"
+            android:text="@string/notify_login"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
-            android:textSize="10pt"/>
+            android:layout_centerInParent="true"
+            android:text="@string/login"
+            android:padding="15dp"
+            android:backgroundTint="@color/button_color"
+            android:textColor="@color/app_background"/>
 
-    </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
 </LinearLayout>
