finish changing avatar and background

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="viewMore_color">#bcbcbc</color>
     <color name="score_color">#ffae42</color>
     <color name="button_color">#0077be</color>
+    <color name="select_image_color">#383838</color>
 </resources>
