--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -7,7 +7,7 @@
         app:showAsAction="always"/>
 
     <item android:id="@+id/login"
-        android:title="Log in"
+        android:title="@string/login"
         app:showAsAction="ifRoom"
         android:clickable="true"
         android:focusable="true"/>
