--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,10 @@
         <item name="android:fontFamily">PT-Sans-Caption</item>
     </style>
 
+    <style name="UserActivityNaviBarTextStyle" parent="AppTheme">
+        <item name="android:textSize">7pt</item>
+    </style>
+
+
 
 </resources>
