--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/container"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:background="#ffffff"
+        android:background="@color/app_background"
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
