--- a/app/src/main/res/layout/bangumirank_layout.xml
+++ b/app/src/main/res/layout/bangumirank_layout.xml
@@ -84,5 +84,5 @@
         android:layout_width="match_parent"
         android:layout_below="@id/card"
         android:layout_height="1dp"
-        android:background="#dfdfdf"/>
+        android:background="@color/divider"/>
 </RelativeLayout>
