--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -26,7 +27,8 @@
                 android:minWidth="80dp"
                 android:maxWidth="80dp"
                 android:maxHeight="80dp"
-                android:minHeight="80dp"/>
+                android:minHeight="80dp"
+                android:src="@drawable/default_avatar"/>
 
         </androidx.cardview.widget.CardView>
 
@@ -69,7 +71,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dfdfdf" />
+        android:background="@color/divider" />
 
     <RelativeLayout
         android:id="@+id/login_layout"
