--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="titleColor">#000000</color>
-    <color name="divider">#dfdfdf</color>
+    <color name="divider">#F0F0F0</color>
     <color name="app_background">#ffffff</color>
     <color name="viewMore_color">#bcbcbc</color>
     <color name="score_color">#ffae42</color>
