--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,6 +72,23 @@
                 app:layout_constraintTop_toBottomOf="@id/username"
                 app:layout_constraintStart_toEndOf="@id/following"/>
 
+            <com.google.android.material.button.MaterialButton
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                android:id="@+id/follow_status"
+                app:layout_constraintTop_toBottomOf="@id/background"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:width="120dp"
+                android:textAlignment="center"
+                android:textSize="6pt"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
+                android:backgroundTint="@color/button_color"
+                android:textColor="@color/app_background"
+                android:layout_height="wrap_content"/>
+
             <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
@@ -92,11 +109,11 @@
                 app:labelVisibilityMode="labeled"
                 app:elevation="0dp"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/user_navigation"
-            android:background="@color/divider"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toBottomOf="@id/user_navigation"
+                android:background="@color/divider"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
