--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".UserActivity">
+    tools:context=".UserActivity"
+    android:id="@+id/page">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +24,6 @@
                 android:layout_width="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_height="220dp"
-                android:src="@drawable/default_background"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true"
                 />
