--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -8,100 +8,28 @@
     android:visibility="invisible"
     android:background="@color/app_background">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
+    <fragment
+        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
-        android:layout_margin="15dp">
+        android:background="@color/app_background"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/detail_menu"
+        app:elevation="0dp"/>
 
-        <ImageView
-            android:id="@+id/bangumi_image"
-            android:maxWidth="115dp"
-            android:minWidth="115dp"
-            android:minHeight="155dp"
-            android:maxHeight="155dp"
-            android:scaleType="fitXY"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider"/>
 
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/bangumi_title"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="2dp"
-        android:layout_toEndOf="@id/image"
-        android:alpha="0.8"
-        android:textColor="@color/titleColor"
-        android:textSize="7.5pt"
-        android:textStyle="bold"/>
-
-    <RelativeLayout
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/image"
-        android:layout_alignBottom="@id/image">
-
-        <TextView
-            android:id="@+id/start_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="6pt"/>
-
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/start_date"
-            android:layout_marginTop="10dp"
-            android:textSize="6pt" />
-
-        <TextView
-            android:id="@+id/episode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/status"
-            android:layout_marginTop="10dp"
-            android:textSize="6pt" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/score_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/image"
-        android:layout_alignParentEnd="true">
-
-        <TextView
-            android:id="@+id/score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/score_color"
-            android:textSize="12.5pt"
-            android:textStyle="bold" />
-
-        <RatingBar
-            android:id="@+id/stars"
-            style="?android:attr/ratingBarStyleSmall"
-            android:isIndicator="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/score"
-            android:stepSize="0.1"
-            android:progressTint="@color/score_color"/>
-
-        <TextView
-            android:id="@+id/user_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_below="@id/stars"
-            android:textColor="@color/viewMore_color"/>
-    </RelativeLayout>
-
-</RelativeLayout>
+        android:layout_height="wrap_content"/>
+</LinearLayout>
